fix bug with index prices in portfolio simulation

--- a/Backoffice/Components/Liquidity/AssetPortfolio/LePortfolioSimulationComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/LePortfolioSimulationComponent.razor
@@ -391,7 +391,10 @@
     }
 
     private void SavePrices()
+
     {
+        _priceMapCollection.RemoveAll(e => string.IsNullOrWhiteSpace(e.Asset) || e.Price == 0);
+        
         var pricesDictionary = _priceMapCollection.ToDictionary(map => map.Asset, map => map.Price);
 
         _assetPortfolioSimulationService.SetSimulationPrices(new SetSimulationPricesRequest()
@@ -399,6 +402,8 @@
             SimulationId = _selectedSimulationId,
             PriceMap = pricesDictionary
         });
+
+        RefreshCurrentSimulation();
     }
 
 }
