--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -42,4 +42,5 @@
 @using Backoffice.Components.Prices
 @using Backoffice.Components.MarketInfo
 @using Backoffice.Components.MarketInfo.ApiKeys
+@using Backoffice.Components.MarketInfo.News
 @using Backoffice.Components.Templates
