added email field to client info

--- a/Backoffice/Components/Clients/ClientInfoComponent.razor
+++ b/Backoffice/Components/Clients/ClientInfoComponent.razor
@@ -6,7 +6,7 @@
 
 @inject IKycStatusService _kycStatusClient
 
-<div style="height: 120px">
+<div style="height: 140px">
 
     <table>
         <tr>
@@ -20,6 +20,10 @@
         <tr>
             <td><b>Client Id:</b></td>
             <td>@Client.ClientId</td>
+        </tr>
+        <tr>
+            <td><b>Email:</b></td>
+            <td>@Client.Email</td>
         </tr>
         <tr>
             <td><b>Email Confirmed:</b></td>
