added spot convert external instrument page

--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -23,6 +23,7 @@
 @using Backoffice.Components.BitGo.Assets
 @using Backoffice.Components.BitGo.Coins
 @using Backoffice.Components.SpotInstruments
+@using Backoffice.Components.SpotExternalInstrumnets
 @using Backoffice.Components.References
 @using Backoffice.Components.Liquidity
 @using Backoffice.Components.Liquidity.Market2
