--- a/Backoffice/Pages/SpotInstruments.razor
+++ b/Backoffice/Pages/SpotInstruments.razor
@@ -1,7 +1,61 @@
 ﻿@page "/SpotInstruments"
 
-<SpotInstrumentComponent />
+<ul class="nav nav-tabs nav-pills">
+    <li class="nav-item" style="margin: 10px">
+        <button class="nav-link @CheckActive(Menus.SpotInstruments)" aria-current="page" @onclick="SetInstruments" >Spot Instuments</button>
+    </li>
+    <li class="nav-item" style="margin: 10px">
+        <button class="nav-link @CheckActive(Menus.SpotExternalInstruments)" @onclick="SetExternalInstruments" >Spot Convert External Instuments</button>
+    </li>
+</ul>
+
+<div style="margin: 10px">
+    
+    @if (ActivePage == Menus.SpotInstruments)
+    {
+        <SpotInstrumentComponent/>
+    }
+
+    @if (ActivePage == Menus.SpotExternalInstruments)
+    {
+        <SpotExternalInstrumentComponent />
+    }
+
+</div>
 
 @code {
+
+    private Menus ActivePage { get; set; } = Menus.SpotInstruments;
+
+    private string CheckActive(Menus target)
+    {
+        if (ActivePage == target)
+            return "active";
+
+        return "";
+    }
+
+    private void SetInstruments()
+    {
+        SetActive(Menus.SpotInstruments);
+    }
+
+    private void SetExternalInstruments()
+    {
+        SetActive(Menus.SpotExternalInstruments);
+    }
     
+
+    private void SetActive(Menus page)
+    {
+        ActivePage = page;
+        StateHasChanged();
+    }
+    
+    public enum Menus
+    {
+        SpotInstruments,
+        SpotExternalInstruments,
+    }
+ 
 }
