--- a/Backoffice/Components/SpotExternalInstrumnets/SpotExternalInstrumentDetailsDialog.razor
+++ b/Backoffice/Components/SpotExternalInstrumnets/SpotExternalInstrumentDetailsDialog.razor
@@ -14,6 +14,7 @@
                     <tr><td>Quote Asset</td><td class="float-left">@Item.QuoteAsset</td></tr>
                     <tr><td>Broker</td><td class="float-left">@Item.BrokerId</td></tr>
                     <tr><td>Symbol</td><td class="float-left">@Item.Symbol</td></tr>
+                    <tr><td>Price Accuracy</td><td class="float-left">@Item.PriceAccuracy</td></tr>
                 </table>
 
             </td>
